<resources>
    <string name="app_name">交小易</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码 (可选)</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱格式错误</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">这个字段是必须的</string>
    <string name="permission_rationale">"需要提供联系人权限"</string>
    <string name="rememberMe">"user_mes"</string>
    <string name="rememberMeFlag">"flag"</string>
    <string name="kong">""</string>
    <string name="NameOrPswNotNull">账号或密码不能为空</string>
    <string name="DBPsw">user_password</string>
    <string name="NameOrPswIsWrong">账号或密码错误</string>
    <string name="RegisterPlease">账号不存在，请先注册！</string>
    <string name="SysTemHelp">系统提示</string>
    <string name="whetherSubmit">是否确定提交？</string>
    <string name="yes">确定</string>
    <string name="pswsDiff">两次输入密码不同，请重新确认</string>
    <string name="reConfirmPsw">请重新设置密码</string>
    <string name="inputSamePsw">请输入和上面同样的密码</string>
    <string name="namee">--账号--</string>
    <string name="psww">--密码--</string>
    <string name="rePsww">--确认密码--</string>
    <string name="phonee">--手机号--</string>
    <string name="inputPlease">请输入</string>
    <string name="afterTry">后重试</string>
    <string name="hasRegister">该用户已被注册！</string>
    <string name="RSAndLogin">注册成功，请登录！</string>
    <string name="back">返回</string>
    <string name="alterSuccess">修改成功！</string>
    <string name="hasPermission">已授权</string>
    <string name="addSuccess">成功添加</string>
    <string name="cancel">取消</string>
    <string name="abandonAdd">放弃添加</string>
    <string name="notPermission">你没有同意授权</string>
    <string name="hasHome">已经是主页</string>
    <string name="my">我的</string>
    <string name="search">搜索</string>
    <string name="home">主页</string>
    <string name="inputKey">请输入关键字</string>
    <string name="register">注册</string>
    <string name="inphone">请输入手机号</string>
    <string name="phone">手机号：</string>
    <string name="reinpsw">请再次输入密码</string>
    <string name="conpsw">确认密码：</string>
    <string name="inpsw">请输入密码</string>
    <string name="psw">密码：</string>
    <string name="inputName">请输入账号</string>
    <string name="name">账号：</string>
    <string name="hcs">HCS</string>
    <string name="alterInfor">修改信息</string>
    <string name="hostory">浏览历史</string>
    <string name="changeUser">切换用户</string>
    <string name="exit">退出</string>
    <string name="namea">账号</string>
    <string name="pswa">密码</string>
    <string name="login">登录</string>
    <string name="RMpsw">记住密码</string>
    <string name="userRegister">新用户注册</string>
    <string name="alter">修改</string>
    <string name="comm">商品：</string>
    <string name="thePhone">电话：</string>
    <string name="Title">Title</string>
    <string name="searchFinish">搜索完成</string>
    <string name="aExit">exit</string>
    <string name="awwhetherPhone">是否将电话</string>
    <string name="ainPhoneText">添加进通讯录</string>
    <string name="adetailInfor">的详细信息</string>
    <string name="auser_mes">user_mes</string>
    <string name="aflag">flag</string>
    <string name="auser">user</string>
    <string name="apsw">psw</string>
    <string name="auser_password">user_password</string>
    <string name="auser_phone">user_phone</string>
    <string name="auser_name">user_name</string>
</resources>