<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/dp368"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp60"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp40"
            android:text="@string/name"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/sp18" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:inputType="phone"
            android:hint="@string/inputName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/dp368"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp40"
            android:text="@string/psw"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/sp18" />

        <EditText
            android:id="@+id/paswd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp60"
            android:inputType="textPassword"
            android:hint="@string/inpsw" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/dp368"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp40"
            android:text="@string/conpsw"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/sp18" />

        <EditText
            android:id="@+id/rePaswd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:inputType="textPassword"
            android:hint="@string/reinpsw" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>


    <LinearLayout
        android:layout_width="@dimen/dp368"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp40"
            android:text="@string/phone"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/sp18" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:inputType="phone"
            android:hint="@string/inphone" />
    </LinearLayout>

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp40"
        android:text="@string/register"
        android:textColor="@color/darkgray"
        android:textSize="@dimen/sp18" />


</LinearLayout>