<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="@dimen/dp70"
        android:layout_height="@dimen/dp70"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp155"
        android:src="@drawable/myhead"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="vertical">
        <EditText
            android:id="@+id/names"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:background="#ffffffff"
            android:hint="@string/namea"

            android:paddingLeft="@dimen/dp20"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/silver" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:background="@color/white"
            android:hint="@string/pswa"
            android:paddingLeft="@dimen/dp20"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textSize="@dimen/sp14" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:gravity="center">

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/jizhu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp20"
            android:checked="false"
            android:text="@string/RMpsw"/>
        <TextView
            android:id="@+id/news"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp85"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/sp16"
            android:text="@string/userRegister" />
    </LinearLayout>

</LinearLayout>