<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp5"
        android:background="@color/myblue">
    </LinearLayout>
    <LinearLayout
        android:layout_margin="@dimen/dp0"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:layout_marginTop="@dimen/dp2"
        android:orientation="horizontal"
        android:background="@color/brown">

        <Button
            android:id="@+id/but1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp60"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/home"
            android:onClick="click1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp20" />
        <Button
            android:id="@+id/but2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp60"
            android:layout_weight="1"
            android:background="@color/myblue"
            android:text="@string/search"
            android:onClick="click2"
            android:textColor="@color/black"
            android:textSize="@dimen/sp20" />
        <Button
            android:id="@+id/but3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp60"
            android:layout_weight="1"
            android:background="@color/myblue"
            android:text="@string/my"
            android:onClick="click3"
            android:textColor="@color/black"
            android:textSize="@dimen/sp20"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp5"
        android:background="@color/myblue">
    </LinearLayout>

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defaultDist"/>

     <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
